[tool.poetry]
name = "gen3"
version = "3.1.0"
description = "Gen3 Data Commons."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://gen3.org/"
repository = "https://github.com/uc-cdis/gen3"
authors = ["Fantix King <fantix@uchicago.edu>"]
include = ["NOTICE", "Makefile"]

# Bug in Poetry 1.0b3: different "from" is not well supported
#packages = [
#    { include = "gen3", from = "src" },
#    { include = "web", format = "sdist" },
#    { include = "tests", format = "sdist" },
#]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
fastapi = {version = "^0.59.0", optional = true}
uvicorn = {version = "^0.10.0", optional = true}
email-validator = {version = "^1.0", optional = true}
edgedb = {version = "^0.6.1", optional = true}
pypfb = {version = "^0.2.0", optional = true}
python-multipart = {version = "^0.0.5", optional = true}
aiofiles = {version = "^0.4.0", optional = true}
aioftp = "^0.13.0"
python-magic = "^0.4.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
requests = "^2.22"

[tool.poetry.extras]
server = [
    "aiofiles",
    "fastapi",
    "edgedb",
    "email-validator",
    "pypfb",
    "python-multipart",
    "uvicorn",
]

[tool.poetry.scripts]
"gen3" = "gen3.cli:gen3"

[tool.poetry.plugins."gen3.cli"]
"server" = "gen3.server.cli [server]"

[tool.poetry.plugins."gen3.schema"]
"auth.user" = "gen3.auth.user:SCHEMA"
"objects.bucket" = "gen3.objects.bucket:SCHEMA"

[tool.poetry.plugins."gen3.server"]
"auth" = "gen3.auth.server:mod"
"submission" = "gen3.submission.server:mod"
"objects" = "gen3.objects.server:mod"

[tool.poetry.plugins."gen3.server.auth"]
"user" = "gen3.auth.user"

[tool.poetry.plugins."gen3.server.submission"]
"dict" = "gen3.submission.dictionary"

[tool.poetry.plugins."gen3.server.objects"]
"bucket" = "gen3.objects.bucket"

[tool.poetry.plugins."gen3.objects.drivers"]
"fs" = "gen3.objects.drivers.fs:FileSystemBucket"
"ftp" = "gen3.objects.drivers.ftp:FtpBucket"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
